--- a/ChartEditor/Views/MainWindow.axaml
+++ b/ChartEditor/Views/MainWindow.axaml
@@ -17,6 +17,12 @@
 		<Border Grid.Column="0" BorderThickness="1" BorderBrush="Black">
 			<StackPanel>
 				<RadioButton>
+					<controls:ClassControl/>
+				</RadioButton>
+				<RadioButton Margin="0, 10">
+					<controls:InterfaceControl/>
+				</RadioButton>
+				<RadioButton>
 					<controls:InheritanceLine/>
 				</RadioButton>
 				<RadioButton>
