--- a/ChartEditor/Views/Control/InterfaceControl.axaml
+++ b/ChartEditor/Views/Control/InterfaceControl.axaml
@@ -4,7 +4,7 @@
 		xmlns:converters="clr-namespace:ChartEditor.Converters">
 		
   <Design.PreviewWith>
-    <controls:InterfaceControl PointsColor="LightBlue" GridHeight="100" GridWidth="100"/>
+    <controls:InterfaceControl PointsColor="LightBlue" GridHeight="100" GridWidth="100" MainParameters="Interface"/>
   </Design.PreviewWith>
 
 	<Styles.Resources>
@@ -16,18 +16,26 @@
     <Setter Property="Template">
       <ControlTemplate>
 		  <Canvas Name="InterfaceCanvas" Height="{TemplateBinding GridHeight}" Width="{TemplateBinding GridWidth}" Background="Transparent">
-			  <Grid Height="{Binding $parent[Canvas].Height, Converter={StaticResource gridSize}}" Width="{Binding $parent[Canvas].Width, , Converter={StaticResource gridSize}}" RowDefinitions="28*, 20*, 20*, 32*" ColumnDefinitions="*" Margin="5" Background="White">
+			  <Grid Height="{Binding $parent[Canvas].Height, Converter={StaticResource gridSize}}" Width="{Binding $parent[Canvas].Width, , Converter={StaticResource gridSize}}" RowDefinitions="30*, 30*, 30*, 10*" ColumnDefinitions="*" Margin="5" Background="White">
 				  <Border BorderThickness="1" BorderBrush="Black" Grid.Row="0">
-					  <StackPanel>
-						  <TextBlock Text="«interface»" FontSize="10" TextAlignment="Center" FontStyle="Italic"/>
-						  <TextBlock Text="Interface" TextAlignment="Center" FontWeight="Bold" Margin="0,-4"/>
-					  </StackPanel>
+					  <Grid RowDefinitions="1.3*, 2*">
+						  <Viewbox Grid.Row="0" Stretch="Uniform" Height="{Binding $parent[Border].Height}" Width="{Binding $parent[Border].Width}">
+							  <TextBlock Text="«interface»" FontSize="10" TextAlignment="Center" FontStyle="Italic"/>
+						  </Viewbox>
+						  <Viewbox Grid.Row="1" Stretch="Uniform" Height="{Binding $parent[Border].Height}" Width="{Binding $parent[Border].Width}">
+							  <TextBlock Text="{TemplateBinding MainParameters}" TextAlignment="Center" FontWeight="Bold"/>
+						  </Viewbox>
+					  </Grid>
 				  </Border>
 				  <Border BorderThickness="1" BorderBrush="Black" Grid.Row="1">
-					  <TextBlock/>
+					  <Viewbox Stretch="Fill" Height="{Binding $parent[Border].Height}" Width="{Binding $parent[Border].Width}">
+						  <TextBlock Text="{TemplateBinding Attributes}"/>
+					  </Viewbox>
 				  </Border>
 				  <Border BorderThickness="1" BorderBrush="Black" Grid.Row="2">
-					  <TextBlock/>
+					  <Viewbox Stretch="Fill" Height="{Binding $parent[Border].Height}" Width="{Binding $parent[Border].Width}">
+						  <TextBlock Text="{TemplateBinding Operations}"/>
+					  </Viewbox>
 				  </Border>
 				  <Border BorderThickness="1" BorderBrush="Black" Grid.Row="3">
 					  <TextBlock/>
