--- a/ChartEditor/Views/Control/AggregationLineControl.axaml
+++ b/ChartEditor/Views/Control/AggregationLineControl.axaml
@@ -14,7 +14,7 @@
 	<Style Selector="controls|AggregationLineControl">
 		<Setter Property="Template">
 			<ControlTemplate>
-				<Canvas Height="20" Width="{TemplateBinding Lenght}" Background="Transparent">
+				<Canvas Name="AggregationCanvas" Height="20" Width="{TemplateBinding Lenght}" Background="Transparent">
 					<Line StartPoint="0,10" EndPoint="{TemplateBinding Lenght, Converter={StaticResource lenghtToPoint}}" StrokeThickness="2" Stroke="Black"/>
 					<Polygon Points="{TemplateBinding Lenght, Converter={StaticResource lenghtToFourPoints}}" Fill="White" StrokeThickness="1" Stroke="Black"/>
 				</Canvas>
