--- a/ChartEditor/Views/Control/AssociationLineControl.axaml
+++ b/ChartEditor/Views/Control/AssociationLineControl.axaml
@@ -14,7 +14,7 @@
   <Style Selector="controls|AssociationLineControl">
     <Setter Property="Template">
       <ControlTemplate>
-		  <Canvas Height="20" Width="{TemplateBinding Lenght}" Background="Transparent">
+		  <Canvas Name="AssociationCanvas" Height="20" Width="{TemplateBinding Lenght}" Background="Transparent">
 			  <Line StartPoint="0, 10" EndPoint="{TemplateBinding Lenght, Converter={StaticResource lenghtToPoint}}" Stroke="Black" StrokeThickness="2"/>
 			  <Polyline Points="{TemplateBinding Lenght, Converter={StaticResource lenghtToTreePoints}}" Stroke="Black" StrokeThickness="2"/>
 		  </Canvas>
