--- a/ChartEditor/Views/Control/DependencyLineControl.axaml
+++ b/ChartEditor/Views/Control/DependencyLineControl.axaml
@@ -15,7 +15,7 @@
   <Style Selector="controls|DependencyLineControl">
     <Setter Property="Template">
       <ControlTemplate>
-		  <Canvas Height="20" Width="{TemplateBinding Lenght}" Background="Transparent">
+		  <Canvas Name="DependencyCanvas" Height="20" Width="{TemplateBinding Lenght}" Background="Transparent">
 			  <Line StartPoint="0, 10" EndPoint="{TemplateBinding Lenght, Converter={StaticResource lenghtToPoint}}" Stroke="Black" StrokeThickness="2" StrokeDashArray="4,3"/>
 			  <TextBlock Text="Use" Background="White" Margin="{TemplateBinding Lenght, Converter={StaticResource lenghtToUseTextMargin}}"/>
 			  <Polygon Points="{TemplateBinding Lenght, Converter={StaticResource lenghtToTreePoints}}" Fill="White" StrokeThickness="1" Stroke="Black"/>
