--- a/ChartEditor/Views/Control/ImplementationLineControl.axaml
+++ b/ChartEditor/Views/Control/ImplementationLineControl.axaml
@@ -14,7 +14,7 @@
 	<Style Selector="controls|ImplementationLineControl">
 		<Setter Property="Template">
 			<ControlTemplate>
-				<Canvas Height="20" Width="{TemplateBinding Lenght}" Background="Transparent">
+				<Canvas Name="ImplementationCanvas" Height="20" Width="{TemplateBinding Lenght}" Background="Transparent">
 					<Line StartPoint="0, 10" EndPoint="{TemplateBinding Lenght, Converter={StaticResource lenghtToPoint}}" Stroke="Black" StrokeThickness="2" StrokeDashArray="4,3"/>
 					<Polygon Points="{TemplateBinding Lenght, Converter={StaticResource lenghtToTreePoints}}" Fill="White" StrokeThickness="1" Stroke="Black"/>
 				</Canvas>
