--- a/ChartEditor/Views/Control/ClassControl.axaml
+++ b/ChartEditor/Views/Control/ClassControl.axaml
@@ -3,12 +3,14 @@
         xmlns:controls="using:ChartEditor.Views.Control"
 		xmlns:converters="clr-namespace:ChartEditor.Converters">
   <Design.PreviewWith>
-    <controls:ClassControl GridHeight="100" GridWidth="100" PointsColor="Red" MainParameters="Class"/>
+    <controls:ClassControl GridHeight="100" GridWidth="100" PointsColor="Red" MainParameters="Class" MainParametersAbstract="True" MainParametersStatic="False"/>
   </Design.PreviewWith>
 
 	<Styles.Resources>
 		<converters:SetStartInLineConverter x:Key="gridSize"/>
 		<converters:MiddleLinePointConverter x:Key="middlePoint"/>
+		<converters:FontStyleConverter x:Key="fontStyle"/>
+		<converters:TextStyleConverter x:Key="textStyle"/>
 	</Styles.Resources>
 		
 		<Style Selector="controls|ClassControl">
@@ -18,17 +20,17 @@
 						<Grid Height="{Binding $parent[Canvas].Height, Converter={StaticResource gridSize}}" Width="{Binding $parent[Canvas].Width, , Converter={StaticResource gridSize}}" RowDefinitions="30*, 30*, 30*, 10*" ColumnDefinitions="*" Margin="5" Background="White">
 							<Border BorderThickness="1" BorderBrush="Black" Grid.Row="0" >
 								<Viewbox Stretch="Uniform" Height="{Binding $parent[Border].Height}" Width="{Binding $parent[Border].Width}">
-									<TextBlock Text="{TemplateBinding MainParameters}" TextAlignment="Center" FontWeight="Bold"/>
+									<TextBlock Text="{TemplateBinding MainParameters}" TextAlignment="Center" FontWeight="Bold" FontStyle="{TemplateBinding MainParametersAbstract, Converter={StaticResource fontStyle}}" TextDecorations="{TemplateBinding MainParametersStatic, Converter={StaticResource textStyle}}"/>
 								</Viewbox>
 							</Border>
 							<Border BorderThickness="1" BorderBrush="Black" Grid.Row="1">
 								<Viewbox Stretch="Fill" Height="{Binding $parent[Border].Height}" Width="{Binding $parent[Border].Width}">
-									<TextBlock FontSize="14" Text="{TemplateBinding Attributes}"/>
+									<TextBlock Text="{TemplateBinding Attributes}" FontStyle="{TemplateBinding AttributesAbstract, Converter={StaticResource fontStyle}}" TextDecorations="{TemplateBinding AttributesStatic, Converter={StaticResource textStyle}}"/>
 								</Viewbox>
 							</Border>
 							<Border BorderThickness="1" BorderBrush="Black" Grid.Row="2">
 								<Viewbox Stretch="Fill" Height="{Binding $parent[Border].Height}" Width="{Binding $parent[Border].Width}">
-									<TextBlock Text="{TemplateBinding Operations}"/>
+									<TextBlock Text="{TemplateBinding Operations}" FontStyle="{TemplateBinding OperationsAbstract, Converter={StaticResource fontStyle}}" TextDecorations="{TemplateBinding OperationsStatic, Converter={StaticResource textStyle}}"/>
 								</Viewbox>
 							</Border>
 							<Border BorderThickness="1" BorderBrush="Black" Grid.Row="3">
